--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,7 +37,12 @@ html(class='no-js')
 
     script(src='/javascripts/app.js')
 
+    script(src="/javascripts/services/FriendshipService.js")
+    script(src="/javascripts/services/TagService.js")
+    script(src="/javascripts/services/ScrapeService.js")
+
     script(src="/javascripts/controllers/BubblesLoginController.js")
+    script(src="/javascripts/controllers/BubblesAdminController.js")
 
     script.
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
