--- a/public/partials/friendship-graph.tmpl.html
+++ b/public/partials/friendship-graph.tmpl.html
@@ -1,1 +1,3 @@
-friendship-graph.tmpl.html
+<div ng-controller="ForceDirectedGraphController">
+    <nvd3 options="options" data="data"></nvd3>
+</div>
