--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,23 +17,37 @@ html(class='no-js')
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
+
+    
+
     link(rel='stylesheet', href='/stylesheets/normalize.css')
+    link(rel='stylesheet', href='/components/angular-material/angular-material.min.css')
     link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='stylesheet', href='/components/nvd3/build/nv.d3.css')
+
     script(src='/javascripts/vendor/modernizr-2.8.3.min.js')
 
   body(ng-app="Bubbles", ng-cloak)
     //if lt IE 7
       p.browsehappy You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
 
+    md-toolbar.md-theme-indigo(layout-padding)
+      h1 Bubbles
+
     block content
 
-    // libraries
+    //-libraries
     script(src='/components/angular/angular.js')
     script(src='/components/angular-animate/angular-animate.js')
     script(src='/components/angular-messages/angular-messages.js')
     script(src='/components/angular-material/angular-material.js')
     script(src='/components/angular-aria/angular-aria.js')
     script(src='/components/angular-input-masks/angular-input-masks-standalone.js')
+
+    //- D3
+    script(src='/components/d3/d3.js')
+    script(src='/components/nvd3/build/nv.d3.js')
+    script(src='/components/angular-nvd3/dist/angular-nvd3.js')
 
     script(src='/javascripts/app.js')
 
@@ -43,6 +57,7 @@ html(class='no-js')
 
     script(src="/javascripts/controllers/BubblesLoginController.js")
     script(src="/javascripts/controllers/BubblesAdminController.js")
+    script(src="/javascripts/controllers/ForceDirectedGraphController.js")
 
     script.
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
