--- a/views/layout.jade
+++ b/views/layout.jade
@@ -54,9 +54,11 @@ html(class='no-js')
     script(src="/javascripts/services/FriendshipService.js")
     script(src="/javascripts/services/TagService.js")
     script(src="/javascripts/services/ScrapeService.js")
+    script(src="/javascripts/services/UserService.js")
 
     script(src="/javascripts/controllers/BubblesLoginController.js")
     script(src="/javascripts/controllers/BubblesAdminController.js")
+    script(src="/javascripts/controllers/BubblesUserController.js")
     script(src="/javascripts/controllers/ForceDirectedGraphController.js")
 
     script.
