--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,7 @@ html(class='no-js')
 
     link(rel='stylesheet', href='/stylesheets/normalize.css')
     link(rel='stylesheet', href='/components/angular-material/angular-material.min.css')
+    link(rel='stylesheet', href='components/md-color-picker/dist/mdColorPicker.css')
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='stylesheet', href='/components/nvd3/build/nv.d3.css')
 
@@ -43,6 +44,9 @@ html(class='no-js')
     script(src='/components/angular-material/angular-material.js')
     script(src='/components/angular-aria/angular-aria.js')
     script(src='/components/angular-input-masks/angular-input-masks-standalone.js')
+    script(src='/components/tinycolor/tinycolor.js')
+    script(src='/components/md-color-picker/dist/mdColorPicker.js')
+      
 
     //- D3
     script(src='/components/d3/d3.js')
@@ -63,6 +67,7 @@ html(class='no-js')
     script(src="/javascripts/controllers/BubblesLoginController.js")
     script(src="/javascripts/controllers/BubblesAdminController.js")
     script(src="/javascripts/controllers/BubblesUserController.js")
+    script(src="/javascripts/controllers/BubblesInvitesController.js")
     script(src="/javascripts/controllers/ForceDirectedGraphController.js")
 
     //- Directives
