--- a/views/admin.jade
+++ b/views/admin.jade
@@ -20,8 +20,6 @@ block content
 									ng-model="valueObj"
 								)
 
-					
-					
 
 					
 					
@@ -31,12 +29,13 @@ block content
 				md-input-container.scrapes(layout="column", layout-align="center center")
 					label Scrape Date #1
 					md-select(ng-model="query.scrape1", aria-label="Scrape Date #1")
-						md-option(ng-repeat="scrape in scrapes", ng-value="scrape") {{scrape.updatedAt | date:'dd/MM/yyyy'}}
+						md-option(ng-repeat="scrape in scrapes.all", ng-value="scrape")
+							{{scrape.updatedAt | date:'dd/MM/yyyy'}}
 				div(ng-include=" '/partials/friendship-graph.tmpl.html' ")
 
 			md-content(flex, layout-padding)
 				md-input-container.scrapes(layout="column", layout-align="center center")
 					label Scrape Date #2
 					md-select(ng-model="query.scrape2", aria-label="Scrape Date #2")
-						md-option(ng-repeat="scrape in scrapes", ng-value="scrape") {{scrape.updatedAt | date:'dd/MM/yyyy'}}
-				div(ng-include=" '/partials/friendship-graph.tmpl.html' ")
+						md-option(ng-repeat="scrape in scrapes.all", ng-value="scrape") {{scrape.updatedAt | date:'dd/MM/yyyy'}}
+				//- div(ng-include=" '/partials/friendship-graph.tmpl.html' ")
