--- a/web/views/login.jade
+++ b/web/views/login.jade
@@ -34,7 +34,7 @@ block content
 					If you desire to have access to the Bubbles Platform, you will be required to submit the following information to the &quot;Bubbles&quot; application:
 				ul
 					li List of friends <strong>(who use this application only)</strong>
-					li List of groups
+					li Your name
 				p.
 					The application "Bubbles" was developed for International Alert in order to collect statistical information on the exchanges and activities on the Platform. Personal information will not be disclosed with external commercial actors, but aggregated information will be shared with International Alert donors.
 
