--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -66,6 +66,7 @@ html(class='no-js')
     script(src="/javascripts/controllers/BubblesUserController.js")
     script(src="/javascripts/controllers/BubblesInvitesController.js")
     script(src="/javascripts/controllers/ForceDirectedGraphController.js")
+    script(src="/javascripts/controllers/elements/TagSelectorController.js")
 
     //- Directives
     script(src="/components/checklist-model/checklist-model.js")
