--- a/web/views/auth/success.jade
+++ b/web/views/auth/success.jade
@@ -6,6 +6,6 @@ block content
 		div.logo
 			img(src="/images/logo.png")
 
-		h1 Social Peace Platform
+		h1 YOUTH PLATFORM
 		h2 Thank you for logging in
 		p Camille will be in touch with you soon to invite you to the <strong>Private</strong> Facebook Group
