--- a/web/views/login.jade
+++ b/web/views/login.jade
@@ -8,7 +8,7 @@ block content
 			div.logo
 				img(src="/images/logo.png")
 			
-			h1 Social Peace Platform
+			h1 YOUTH PLATFORM
 
 			div.cta
 				md-button.md-raised.md-primary(fb-login,href="/auth/facebook") Login with Facebook
