--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -22,9 +22,16 @@ html(class='no-js')
 
     link(rel='stylesheet', href='/stylesheets/normalize.css')
     link(rel='stylesheet', href='/components/angular-material/angular-material.min.css')
+
+
+    //- Custom Directives
+    link(rel='stylesheet', href='/stylesheets/directives/tagSelector.css')
+
+
     link(rel='stylesheet', href='components/md-color-picker/dist/mdColorPicker.css')
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='stylesheet', href='/components/nvd3/build/nv.d3.css')
+
 
     script(src='/javascripts/vendor/modernizr-2.8.3.min.js')
 
@@ -70,6 +77,10 @@ html(class='no-js')
 
     //- Directives
     script(src="/components/checklist-model/checklist-model.js")
+    script(src="/components/angularjs-slider/src/rzslider.js")
+
+    //- Custom Directives
+    script(src="/javascripts/directives/tagSelector.js")
 
 
 
