tag selector directive complete

--- a/web/views/tagSelector.jade
+++ b/web/views/tagSelector.jade
@@ -7,9 +7,11 @@ block content
 		div( 
 			tag-selector
 			available-tags="availableTags",
-			have-tags="haveTags"
-			have-not-tags="haveNotTags"
+			selected-tags="selectedTags"
 		)
+
+		pre {{availableTags}}
+		pre {{selectedTags}}
 
 
 		//- div(
