--- a/web/views/partials/directives/tagSelector.jade
+++ b/web/views/partials/directives/tagSelector.jade
@@ -1,19 +1,22 @@
 div.tag-selector
 	div.summary
-		span Showing all tags
-	div.have
-		h3 Have
-		md-button.md-raised.md-primary(
-			ng-repeat="tag in availableTags"
-			ng-click="toggleHas(tag)"
-			ng-class=" isSelectedHas(tag) ? 'selected': '' "
-		) {{tag.name}}
+		span Selected Tags: 
+		span(ng-show="allTags") All
+		span(ng-hide="allTags || selectedTags.length") None
+		span(
+			ng-hide="allTags"
+			ng-repeat="selectedTag in selectedTags"
+		) {{selectedTag.name}}{{$last ? '':', '}}
+	div.tags
+		
+		md-checkbox(
+			ng-model="allTags"
+			ng-change="toggleAllTags()"
+		) Show All tags
 
-
-	div.haveNot
-		h3 Have Not
 		md-button.md-raised.md-primary(
+			ng-disabled="allTags"
 			ng-repeat="tag in availableTags"
-			ng-click="toggleHasNot(tag)"
-			ng-class=" isSelectedHasNot(tag) ? 'selected': '' "
+			ng-click="toggle(tag)"
+			ng-class=" isSelected(tag) ? 'selected': '' "
 		) {{tag.name}}
