--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -66,6 +66,7 @@ html(class='no-js')
     script(src="/javascripts/services/TagService.js")
     script(src="/javascripts/services/ScrapeService.js")
     script(src="/javascripts/services/UserService.js")
+    script(src="/javascripts/services/D3GraphOptionsService.js")
 
     //- controllers
     script(src="/javascripts/controllers/BubblesLoginController.js")
