--- a/web/views/admin.jade
+++ b/web/views/admin.jade
@@ -5,35 +5,16 @@ block content
 	div(ng-controller="BubblesAdminController", flex, layout="column", layout-wrap, layout-padding)
 
 		section(layout="row", flex)
-			//- md-sidenav.md-sidenav-left(md-component-id="left", md-is-locked-open="true", md-whiteframe="4")
-				md-content(layout-padding)
-					h2 Tags
-					ul.tags
-						li(ng-repeat="tag in tags.all", layout-wrap, flex, layout="row")
-							div(flex=50, style="padding-top:25px")
-								md-checkbox(
-									aria-label="{{tag.name}}"
-									ng-model="query.tags[tag.id]")
-									span {{tag.name}}
-							div(flex=50)
-								md-color-picker(
-									ng-model="valueObj"
-								)
-
-
-					
-					
-					//- pre {{ query | json }}
 
 			md-content(flex, layout-padding)
 				md-input-container.scrapes(
 					layout="column"
 					layout-align="center center"
 				)
-					label Scrape Date #1
+					label Snapshot #1
 					md-select(
-						ng-model="query.scrape1"
-						aria-label="Scrape Date #1"
+						ng-model="graphs[0].selectedScrape"
+						aria-label="Snapshot #1"
 					)
 						md-option(
 							ng-repeat="scrape in scrapes.all"
@@ -43,23 +24,42 @@ block content
 				//- Graph			
 				div.graph
 					nvd3(
-						options="graphs.d3options"
-						data="graphs.data[0]"
-						api="api"
+						options="d3options"
+						data="graphs[0].data"
+						api="graphs[0].api"
 					)
 
 				div.tags
 					tag-selector( 
 						available-tags="tags.all",
-						selected-tags="scrape1Tags"
+						selected-tags="graphs[0].selectedTags"
 					)
 
-
 			md-content(flex, layout-padding)
-				md-input-container.scrapes(layout="column", layout-align="center center")
-					label Scrape Date #2
-					md-select(ng-model="query.scrape2", aria-label="Scrape Date #2")
-						md-option(ng-repeat="scrape in scrapes.all", ng-value="scrape") {{scrape.updatedAt | date:'dd/MM/yyyy HH:mm'}}
+				md-input-container.scrapes(
+					layout="column"
+					layout-align="center center"
+				)
+					label Snapshot #2
+					md-select(
+						ng-model="graphs[1].selectedScrape"
+						aria-label="Snapshot #2"
+					)
+						md-option(
+							ng-repeat="scrape in scrapes.all"
+							ng-value="scrape"
+						).
+							{{scrape.updatedAt | date:'dd/MM/yyyy HH:mm'}}
 				//- Graph			
 				div.graph
-					nvd3(options="graphs.d3options", data="graphs.data[1]")
+					nvd3(
+						options="d3options"
+						data="graphs[1].data"
+						api="graphs[1].api"
+					)
+
+				div.tags
+					tag-selector( 
+						available-tags="tags.all",
+						selected-tags="graphs[1].selectedTags"
+					)
