--- a/web/public/stylesheets/main.css
+++ b/web/public/stylesheets/main.css
@@ -136,7 +136,44 @@ h1 {
 
 /*Admin*/
 
-.graph {margin:0 auto; min-height:500px;}
+
+.nav {
+    background:#eee;
+}
+.nav h1 {float: left; margin:10px 0 0 1em;}
+.nav ul {list-style: none; margin:0; padding:1em; background:#eee; float:right;}
+.nav ul li {
+    margin:5px;
+    float:left;
+}
+.nav ul li a,
+.nav ul li a:visited {
+    color:#000;
+    padding:5px 1em;
+    background: #ddd;
+    text-decoration: none;
+    border-radius: 3px;
+}
+.nav ul li a:hover {
+    background: #ccc;
+}
+
+/*Compare*/
+.compare md-content {
+    
+}
+.compare md-content:first-child {
+    padding-right:20px;
+    border-right: 2px solid #666;
+}
+.compare md-content:nth-child(2) {
+    padding-left:20px;
+}
+.compare .graph {background:#eee;margin:0 auto; min-height:500px;}
+
+
+
+
 .tags {
 
 }
