--- a/web/views/admin/users.jade
+++ b/web/views/admin/users.jade
@@ -15,29 +15,26 @@ block content
 					h1.md-toolbar-tools Filter Users
 				md-content(layout-padding)
 
-					p Name
-					md-input-container
+					p Filter by name or tag
+					md-input-container.md-block
 						label By name
 						input(ng-model="query.displayName")
 
-					p Tag
-					md-radio-group(ng-model="query.tag")
-						md-radio-button(
-							ng-repeat="tag in tags.all"
-							ng-value="tag"
-							aria-label="{{tag.name}}"
-							) {{tag.name}}
-
-					p Group Membership
-					md-radio-group(ng-model="query.in_group")
-						md-radio-button(
-							ng-value="true"
-							aria-label="In group"
-							) In group
-						md-radio-button(
-							ng-value="false"
-							aria-label="Not in group"
-							) Not in group
+					tag-selector( 
+							available-tags="tags.all",
+							selected-tags="query.selectedTags"
+						)
+					
+					//- p Group Membership
+					//- md-radio-group(ng-model="query.in_group")
+					//- 	md-radio-button(
+					//- 		ng-value="true"
+					//- 		aria-label="In group"
+					//- 		) In group
+					//- 	md-radio-button(
+					//- 		ng-value="false"
+					//- 		aria-label="Not in group"
+					//- 		) Not in group
 
 
 			md-content(flex, layout-padding)
@@ -63,21 +60,37 @@ block content
 				md-toolbar.md-theme-light
 					h1.md-toolbar-tools {{userDetail.displayName}}
 
+					
+
 					md-content(layout-padding)
-						md-list
-							md-list-item.md-1-line
-								div.md-list-item-text
-									span Facebook gender: {{userDetail.gender || 'n/a'}}
+
+						div.profile_pic
+							img(
+								alt="{{user.name}}"
+								ng-src="http://graph.facebook.com/{{userDetail.fb_id}}/picture?type=large"
+							)
+
+
 						tag-selector( 
 							available-tags="tags.all",
 							selected-tags="userDetail.Tags"
 						)
+						
+						form(name="newTagForm")
+							md-input-container.md-block
+								label Create a tag
+								input(
+									required
+									ng-model="newTagName"
+								)
 
-						
-						div(layout="column")
-							h3 Add new tag
-							md-input-container
-								label Tag
-								input(ng-model="newTagName")
-						
-							md-button.md-raised.md-primary(ng-click="createNewTag()") Add
+									
+							md-button.md-raised.md-primary(
+								ng-disabled="newTagForm.$invalid"
+								ng-click="createNewTag()"
+							) Add
+
+
+
+
+
