--- a/web/views/admin/compare.jade
+++ b/web/views/admin/compare.jade
@@ -3,7 +3,7 @@ extends ../layouts/admin
 
 block content
 	div.compare(
-		ng-controller="BubblesAdminController"
+		ng-controller="AdminCompareController"
 		flex
 		layout="column"
 		layout-wrap
