--- a/web/views/layouts/admin.jade
+++ b/web/views/layouts/admin.jade
@@ -27,8 +27,6 @@ html(class='no-js')
     //- Custom Directives
     link(rel='stylesheet', href='/stylesheets/directives/tagSelector.css')
 
-
-    link(rel='stylesheet', href='components/md-color-picker/dist/mdColorPicker.css')
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='stylesheet', href='/components/nvd3/build/nv.d3.css')
     link(rel='stylesheet', href='/components/material-design-icons/iconfont/material-icons.css')
@@ -36,7 +34,7 @@ html(class='no-js')
 
     script(src='/javascripts/vendor/modernizr-2.8.3.min.js')
 
-  body(ng-app="Bubbles", ng-cloak)
+  body(ng-app="BubblesAdmin", ng-cloak)
     //if lt IE 7
       p.browsehappy You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
 
@@ -61,8 +59,6 @@ html(class='no-js')
     script(src='/components/angular-material/angular-material.js')
     script(src='/components/angular-aria/angular-aria.js')
     script(src='/components/angular-input-masks/angular-input-masks-standalone.js')
-    script(src='/components/tinycolor/tinycolor.js')
-    script(src='/components/md-color-picker/dist/mdColorPicker.js')
       
 
     //- D3
@@ -71,7 +67,7 @@ html(class='no-js')
     script(src='/components/angular-nvd3/dist/angular-nvd3.js')
 
 
-    script(src='/javascripts/app.js')
+    script(src='/javascripts/apps/admin.js')
 
 
     //- Services
@@ -82,8 +78,8 @@ html(class='no-js')
     script(src="/javascripts/services/D3GraphOptionsService.js")
 
     //- controllers
-    script(src="/javascripts/controllers/BubblesLoginController.js")
-    script(src="/javascripts/controllers/BubblesAdminController.js")
+    script(src="/javascripts/controllers/AdminLoginController.js")
+    script(src="/javascripts/controllers/AdminCompareController.js")
     script(src="/javascripts/controllers/UsersController.js")
     script(src="/javascripts/controllers/BubblesInvitesController.js")
     script(src="/javascripts/controllers/TagsController.js")
