--- a/web/views/public/auth/success.jade
+++ b/web/views/public/auth/success.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends ../../layouts/public
 
 
 block content
@@ -7,5 +7,5 @@ block content
 			img(src="/images/logo.png")
 
 		h1 YOUTH PLATFORM
-		h2 Thank you for logging in
+		h2 Thank you for logging in, #{user.displayName}
 		p Camille will be in touch with you soon to invite you to the <strong>Private</strong> Facebook Group
